--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "192x192"
     },
     {
-      "src": "android-chrome-512x512.png",
+      "src": "images/android-chrome-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
